2007-01-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store_label): Only store color value for each label
	in a "with labels" plot if "rgb variable" has been requested.
	Bugfix.

2007-01-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.h src/graphics.c (plot_image_or_update_axes)
	term/pdf.trm (PDF_filled_polygon) src/color.c (filled_quadrangle
	filled_polygon_3dcoods filled_polygon_3dcoords_zfixed):
	Change gpiPoints to contain signed x,y values. This is what the
	explanatory comment always implied ("same as in gd.h"), but it 
	wasn't true.  The change fixes several image and polygon clipping
	problems, including segfaults in the pdf driver.
	Bug #1612502

2007-01-27  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* docs/gnuplot.doc: Rearranged the introduction, so it discusses
	command-line arguments before gnuplot commands, and command files
	before interactive mode. 

2007-01-26  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc term/gd.trm: Mention that in order to use transparent
	fill in png images, you must "set term png truecolor".

2007-01-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm: Typo in docs.

2007-01-23  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: The libreadline checks got mangled. Bad patch?
	This fixes the breakage, and adds a warning if gd.h is not found.

2007-01-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_image) term/pdf.trm (PDF_image) term/post.trm
	(PS_image) src/wxterminal/gp_cairo.c (gp_cairo_draw_image):  Implement
	clipping in accordance with the bounding box passed to term->image()
	via corner[2] and corner[3]. Up until now, only x11 implemented this
	aspect of image rendering.   Not yet implemented: aquaterm pm win
	Bug #1612502

2007-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* configure.in: Let the GNU readline be the default instead of the
	built-in readline. Improved messages for --with-readline.
